<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="349dp"
        android:layout_marginBottom="549dp"
        android:text="@string/km"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="486dp"
        android:text="@string/miles"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/km"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="531dp"
        android:autofillHints="0"
        android:hint="@string/enter_distance_in_km"
        android:ems="10"
        android:inputType="number|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/km"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMiles"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="458dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_distance_in_miles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/miles"
        app:layout_constraintTop_toBottomOf="@+id/editTextKM"
        android:autofillHints="0" />

    <Button
        android:id="@+id/buttonConKMToMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="46dp"
        android:text="@string/convert_km_to_miles"
        app:layout_constraintBottom_toTopOf="@+id/buttonConMilesToKM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMiles" />

    <Button
        android:id="@+id/buttonConMilesToKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="203dp"
        android:text="@string/convert_miles_to_km"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConKMToMiles" />

</androidx.constraintlayout.widget.ConstraintLayout>